# fortran_ballistics

./: .gitignore  CMakeLists.txt  README.md  configure
src/: a01_initialize.F90  a02_executeForBal.F90  main.F90
src/modules/: fb_MathMod.F90  fb_ParametersMod.F90  fb_UtilitiesMod.F90
